BE implementation - Fixing a few bugs in components after merge - Add missing layout import - Increase touch target width on pagination - Hide arrows on screen readers as there's descriptive text - Disable elipsis in pagination - Move "Did you mean" out of grey box for colour contrast

--- a/public/app/frontend/src/components/search-bar-block/search-bar-block.scss
+++ b/public/app/frontend/src/components/search-bar-block/search-bar-block.scss
@@ -34,7 +34,7 @@
     }
 
     &__did-you-mean {
-        @include spacing('margin', 1, 'top');
+        @include spacing('margin', 4, 'top');
 
         display: block;
         width: 100%;
