--- a/public/app/frontend/src/components/selection-input/selection-input.scss
+++ b/public/app/frontend/src/components/selection-input/selection-input.scss
@@ -46,10 +46,6 @@
         margin-top: -0.65rem;
         flex-shrink: 0;
 
-        + label {
-            cursor: pointer;
-        }
-
         &[type='radio'] {
             + label {
                 &::before,
